--- a/Python_API/api/requirements.txt
+++ b/Python_API/api/requirements.txt
@@ -1,7 +1,7 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.1.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+click>=8.0.0
+Flask>=2.3.0
+gunicorn>=21.0.0
+itsdangerous>=2.1.0
+Jinja2>=3.1.0
+MarkupSafe>=2.1.0
+Werkzeug>=2.3.0
